sdk_tests/tests/pbc_contract_codegen/fail/zk/secret_input_struct_not_secret.stderr
error[E0277]: the trait bound `SecretStruct: pbc_zk_core::SecretBinary` is not satisfied
  --> tests/pbc_contract_codegen/fail/zk/secret_input_struct_not_secret.rs:21:1
   |
21 | #[zk_on_secret_input(shortname = 0x04, secret_type = "SecretStruct")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `pbc_zk_core::SecretBinary` is not implemented for `SecretStruct`
   |
   = help: the following other types implement trait `pbc_zk_core::SecretBinary`:
             bool
             pbc_zk::sbi::Sbi<i8>
             pbc_zk::sbi::Sbi<i16>
             pbc_zk::sbi::Sbi<i32>
             pbc_zk::sbi::Sbi<i64>
             pbc_zk::sbi::Sbi<i128>
             ()
             (A,)
           and $N others
note: required by a bound in `FnAbi::secret_argument`
  --> $WORKSPACE/pbc_contract_core/src/abi/func.rs
   |
   |     pub fn secret_argument<T: CreateTypeSpec + SecretBinary>(
   |                                                ^^^^^^^^^^^^ required by this bound in `FnAbi::secret_argument`
   = note: this error originates in the attribute macro `zk_on_secret_input` (in Nightly builds, run with -Z macro-backtrace for more info)
